plugins {
    id "java"
    id "application"
}

repositories {
    jcenter()
    mavenCentral()
}

group "io.github.proton"
version "1.0-SNAPSHOT"

dependencies {
    compile "io.vavr:vavr:0.9.3"
    compile "org.slf4j:slf4j-nop:1.7.9"
    compile "org.pf4j:pf4j:3.2.0"
    implementation 'io.github.vincenzopalazzo:material-ui-swing:1.1.1-rc4'
    implementation 'com.github.javaparser:javaparser-core:3.16.1'
    annotationProcessor "org.pf4j:pf4j:3.2.0"
}

sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

application {
    mainClassName = "io.github.proton.Main"
}

jar {
    manifest {
        attributes "Main-Class": "io.github.proton.ui.Proton"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}